manifests/base/resources/precedents/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9054"
    prometheus.io/scrape: "true"
  labels:
    app: precedents
    chart: precedents-1.1.30
    heritage: Helm
    release: precedents
  name: precedents
spec:
  ports:
  - name: precedents
    port: 9054
    protocol: TCP
    targetPort: 9054
  selector:
    app: precedents
    release: precedents
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "50052"
    prometheus.io/scrape: "true"
  labels:
    app: precedents
    chart: precedents-1.1.30
    heritage: Helm
    release: precedents
  name: precedents-cayley
spec:
  ports:
  - name: precedents
    port: 50052
    protocol: TCP
    targetPort: 50052
  selector:
    app: precedents
    release: precedents
  type: ClusterIP
---
