manifests/base/resources/precedents/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://precedents-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/precedent/(.*) /$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: precedents
    chart: precedents-1.1.30
    heritage: Helm
    release: precedents
  name: precedents
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: precedents
          servicePort: 9054
        path: /api/precedent
---
